--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,23 @@
+body {
+    background-image: url("../images/interlaced.png")
+}
+
+.row {
+    margin:10px 0px 10px 0px;
+}
+
 .btn-primary {
     margin:10px;
+}
+
+.card-img-top {
+    height:75%;
+}
+
+.card {
+    margin: 10px;
+}
+
+.card-title, .card-text {
+    font-size:1vw;
 }
